-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2
-
None
-
-
a0f5937868a97af7b6f97ffc9c0aed12d84cceb3 (qt/qtwayland/dev) ae1557f62926595d5127b99b8f52a0e2a81eb668 (qt/qtwayland/6.2)
When windows are repeatedly shown and hidden, xdg_surface_configure() may be called again before QWaylandXdgSurface::applyConfigure(). This causes
ASSERT: "m_pendingConfigureSerial != 0" in file qtwayland/src/plugins/shellintegration/xdg-shell/qwaylandxdgshell.cpp, line 351
To reproduce: Run the example from QTBUG-87624 with the fix for that bug. Do this in a small compositor window so that the overlay window is always shown under the mouse. This will cause it to be repeatedly shown and hidden.
- resulted from
-
QTBUG-87624 Wayland client crash when QDrag is used
-
- Closed
-
| For Gerrit Dashboard: QTBUG-96464 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 372824,3 | Wayland client: Don't applyConfigure for destroyed surface | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
| 373049,2 | Wayland client: Don't applyConfigure for destroyed surface | 6.2 | qt/qtwayland | Status: MERGED | +2 | 0 |