Wayland client: Don't applyConfigure for destroyed surface

If a window is rapidly hidden and re-shown multiple times, the configure
for a deleted wl_surface may be invoked after a new surface has been
created. This change makes sure we always reset mWaitingToApplyConfigure
before a new wl_surface is created. The superfluous applyConfigure
invocation will then be safely ignored.

Fixes: QTBUG-96464
Change-Id: Ie2d718f77dc8de93674c6b86b5128c4f50414df1
Reviewed-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit a0f5937868a97af7b6f97ffc9c0aed12d84cceb3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>